--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ ci:
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
       - id: check-added-large-files
       - id: check-json
@@ -13,11 +13,9 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v2.7.1
+    rev: v3.1.0
     hooks:
       - id: prettier
         additional_dependencies:
-          - "prettier@2.7.1"
-          - "@prettier/plugin-xml@2.1.0"
-        args:
-          - --xml-whitespace-sensitivity=ignore
+          - prettier@3.1.0
+          - "@prettier/plugin-xml@3.2.2"
